# libdog

./: .gitignore  AT.c  BRAM.c  BRAM.h  CLI.c  CLI.h  CMakeLists.txt  DOG.c  DOG.h  DOG.md  DPATH.c.rl  DPATH.h  DPATH.rl.c  FRAG.c.rl  FRAG.h  FRAG.rl.c  HOME.c  HOME.h  HUNK.c  HUNK.h  IGNO.c  INDEX.md  KEYW.c  NEIL.c  NEIL.h  QURY.c.rl  QURY.h  QURY.rl.c  README.md  ROWS.c  ROWS.h  SHA1.h  THEME.c  THEME.h  TOK.c  ULOG.c  ULOG.h  ULOG.md  VERSN.c  VERSN.h  (+4 more)
.github/workflows/: ci.yml
fuzz/: CMakeLists.txt  NEIL.c  PACKRESOLVE.c  WEAVE.c
git/: CFG.c  CFG.c.rl  CFG.h  CFG.rl.c  DELT.c  GIT.c  GIT.h  IGNO.c  IGNO.h  PACK.c  PACK.h  PIDX.c  PIDX.h  PKT.c  SHA1.h  SUBS.c  SUBS.h  ZINF.c  ZINF.h
test/: BRAM01.c  BRAM02.c  CFG.c  CLI.c  CMakeLists.txt  DOG.c  DPATH.c  FRAG.c  HOME.c  HUNK.c  IGNO.c  NEIL01.c  PACKRESOLVE.c  PIDX.c  QURY.c  TESTBE.h  TOK01.c  ULOG.c  WEAVE01.c  WEAVE02.c  WEAVE03.c  WEAVE04.c  WHIFF.c
tok/: AGDT.c  AGDT.c.rl  AGDT.rl.c  CLJT.c  CLJT.c.rl  CLJT.rl.c  CMKT.c  CPPT.c  CPPT.c.rl  CPPT.rl.c  CSST.c  CST.c  CST.c.rl  CST.rl.c  CT.c  CT.c.rl  CT.rl.c  DARTT.c  DARTT.c.rl  DARTT.rl.c  DEF.c  DKFT.c  DT.c  DT.c.rl  DT.rl.c  ELXT.c  ERLT.c  FORT.c  FREE.c  FREE.c.rl  FREE.h  FREE.rl.c  FSHT.c  FSHT.c.rl  FSHT.rl.c  GLMT.c  GLST.c  GLST.c.rl  GLST.rl.c  GOT.c  (+98 more)
